# iot-server-client-hal-cpp

./: CMakeLists.txt  README.md
custom_json/: CMakeLists.txt
custom_json/include/: custom_json.h
custom_json/src/lib/: CMakeLists.txt  custom_json.cpp
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/images/: ds_publisttop.drawio  ds_pubreg.drawio  ds_pubregtop.drawio  ds_sendpayload.drawio  ds_sublistentop.drawio  ds_subreg.drawio  ds_subunregtop.drawio  iot_client_server_arch.drawio  n_pub_n_sub_arch.drawio  n_pub_one_sub_arch.drawio  one_pub_one_sub_arch.drawio
docs/md/: arch.md
hal/include/: hal_buzzer.h  hal_gps.h  hal_ir_obstacle_sensor.h  hal_temp_sensor.h
hal/src/app/: hal_test.cpp
hal/src/lib/buzzer/: CMakeLists.txt  hal_buzzer.cpp
hal/src/lib/camera/: CMakeLists.txt  hal_camera.cpp
hal/src/lib/gps/: CMakeLists.txt  hal_gps.cpp
hal/src/lib/rgb_led/: hal_rgb_led.cpp
hal/src/lib/rtc/: hal_rtc.cpp
hal/src/lib/temp_sensor/: CMakeLists.txt  hal_temp_sensor.cpp
iot_client_server/: CMakeLists.txt
iot_client_server/include/: iot_client.h  iot_server.h  log.h  message.h  process_client.h  process_server.h  server_thread.h  utils.h
iot_client_server/src/demo/iot_client_app/: CMakeLists.txt  iot_client_app.cpp  pub_iot_client_accel_gyro_app.cpp  pub_iot_client_temperature_app.cpp  sub_listen_one_pub_app.cpp  sub_listen_two_pubs_app.cpp
iot_client_server/src/demo/iot_server_app/: CMakeLists.txt  iot_server_app.cpp
iot_client_server/src/lib/: CMakeLists.txt
iot_client_server/src/lib/iot_client/: CMakeLists.txt  iot_client.cpp
iot_client_server/src/lib/iot_server/: CMakeLists.txt  iot_server.cpp  process_client.cpp  process_server.cpp  server_thread.cpp  utils.cpp
project/: CMakeLists.txt
project/hal/: CMakeLists.txt
project/hal/include/: hal_accel_gyro_sensor.h  hal_camera.h  hal_light_sensor.h  hal_rgb_led.h  hal_rtc.h
project/hal/src/app/: CMakeLists.txt  hal_test.cpp
project/hal/src/lib/accel_gyro_sensor/: CMakeLists.txt  hal_accel_gyro_sensor.cpp
project/hal/src/lib/ir_obstacle_sensor/: CMakeLists.txt  hal_ir_obstacle_sensor.cpp
project/hal/src/lib/light_sensor/: CMakeLists.txt  hal_light_sensor.cpp
project/hal/src/lib/rgb_led/: CMakeLists.txt
project/hal/src/lib/rtc/: CMakeLists.txt
project/json/src/lib/: CMakeLists.txt
