project(HALRTC VERSION 1.0 DESCRIPTION "HAL RTC Library")
add_library(HALRTC SHARED hal_rtc.cpp)

set_target_properties(HALRTC PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION 1
    PUBLIC_HEADER hal_rtc.h)

target_include_directories(HALRTC PRIVATE ${CMAKE_SOURCE_DIR}/hal/include)

install(TARGETS HALRTC
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

